// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should correctly render expenses total with 1 expense 1`] = `
<div>
  <h1>
    Viewing 
    1
     
    expense
     totalling 
    $0.12
  </h1>
</div>
`;

exports[`Should correctly render expenses total with multiple expenses 1`] = `
<div>
  <h1>
    Viewing 
    23
     
    expenses
     totalling 
    $123.45
  </h1>
</div>
`;
